added new text and design elements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>FrappeLife</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
@@ -12,10 +12,13 @@
     <h1 class="headers">About Me</h1>
     <h2 class="headers">Brittany Samone</h2>
     <br>
-    <b id="first"><i>My favorite color is pink</i></b>
-    <p id="firstparagraph">I'm excited about fall</p>
-    <p class="others">I'm excited about frappes</p>
-    <div class="others">Frappes in the <span id="lastword"><i>fall</i></span></div>
+    <b id="first"><i>Once upon a<span class="lastword"> time</span></i></b>
+    <p id="second">there lived a beautiful <span class="lastword"> queen</span></p>
+    <p id="third">Who ruled her<span class="lastword"> kingdom</span> </p>
+    <p id="fourth">With four adorable <span class="lastword"><i>trolls.</i></span></p>
+    <p id="fifth">They each loved <span class="lastword"> pancakes</span> </p>
+    <p id="sixth"> Scrumptious strawberry <span class="lastword"> pancakes</span></p>
+   
     
 </body>
 </html>
