added js file and extra color text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p id="third">Who ruled her<span class="lastword"> kingdom</span> </p>
     <p id="fourth">With four adorable <span class="lastword"><i>trolls.</i></span></p>
     <p id="fifth">They each loved <span class="lastword"> pancakes</span> </p>
-    <p id="sixth"> Scrumptious strawberry <span class="lastword"> pancakes</span></p>
+    <p id="sixth"> Scrumptious <span id="fruit">strawberry</span> <span class="lastword"> pancakes</span></p>
    
     
 </body>
